--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <html>
+
 <head>
     <meta charset="utf-8">
     <title>Лабораторна робота №7 ПІС</title>
     <link rel="stylesheet" type="text/css" href="main.css">
-    <script type="text/javascript" src="main.js" defer></script>
+    <script type="text/javascript" src="script.js" defer></script>
+    <meta name="author" content="ІС-22 Василенко Дмитро">
 </head>
 
 <body>
-    <h1>Виконав: Василенко Дмитро ІС-22    </h1>
     <form name="cityForm">
-        <h4 class="blah">Здесь вы можете узнать актуальный прогноз погоды в любом городе</h4>
+        <h4 class="blah">Перевірити погоду у будь-якому місті:</h4>
         <hr>
-        <h3>Введите название города:</h3>
-        <input type="text" name="cityName" placeholder="Kyiv,UA"><br><br>
-        <input type="button" name="search" value="Поиск">
+        <h3>Введіть назву міста:</h3>
+        <input type="text" name="cityName" placeholder="London" style="font-size: 16;"><br><br>
+        <input type="button" name="search" value="Пошук" class="button">
     </form>
 </body>
+
 </html>
